Delay TempSymbol cleanup to avoid symbol table churn

XMLWordPrintable

    • b11
    • b27

        Dacapo pmd benchmark (`java -jar dacapo-9.12-MR1.jar --size large --iterations 20 pmd`) regressed 5-20% on all platforms.

        This is caused by JDK-8313678, which fixed a symbol leak, but the leak was actually beneficial to performance in some cases as it allowed cheap temp symbol re-use instead of churning symbols with the associated cleanup and recreation cost.

              Assignee:
              Oli Gillespie
              Reporter:
              Eric Caspole
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: