8315559: Delay TempSymbol cleanup to avoid symbol table churn

Reviewed-by: phh, shade
Backport-of: d23f4f12adf1ea26b8c340efe2c3854e50b68301